# third-wheel

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  RELEASE.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
INTERNAL_DOCS/: architecture.md  commands.md  gotchas.md  known-issues.md  planning.md  proxy-server.md  technical-concepts.md  testing.md
examples/: cli_rename.py  compare_skimage.py  compare_zarr.py  icechunk_dual_version.py
src/third_wheel/: __init__.py  build.py  cli.py  download.py  patch.py  rename.py  run.py  sync.py
src/third_wheel/server/: html.py  stream.py  upstream.py
tests/: test_build.py  test_download.py  test_properties.py  test_rename.py  test_run.py  test_server.py  test_sync.py
tests/fixtures/pixi-project/: pixi.toml
